Add outlines for publish job endpoints
